# hopeworks-english-assignment

./: .gitignore  LICENSE  README.md  docker-compose.yml  reset_password.py
.agent/skills/design-skill/: SKILL.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py  schemas.py  scoring.py  whisper_service.py
backend/app/routers/: admin.py  auth.py  reports.py  story.py  submission.py
backend/data/audio/237c9c26-2c79-4066-af01-39c1163f03ab/: 1_f5ae464c.webm  2_bf21f4c0.webm
frontend/: .gitignore  Dockerfile  capacitor.config.json  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/java/com/hopeworks/englishpracticeapp/: MainActivity.java
frontend/android/app/src/main/res/values/: strings.xml
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Navbar.jsx  Recorder.jsx  StoryCard.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminDashboard.jsx  Login.jsx  StudentDashboard.jsx
frontend/src/services/: api.js  tts.js
